# tinygif

./: Cargo.toml  LICENSE.md
benches/: draw.rs  perf.rs
examples/: display.rs
src/: common.rs  frame.rs  header.rs  iterators.rs  lib.rs  test_utils.rs
