[package]
name = "tinygif"
description = "No-std, low memory footprint gif loader"
version = "0.0.1"
authors = ["Jimmy C <jimmy@1024bees.com>"]
edition = "2021"
repository = "https://github.com/embedded-graphics/tinybmp"
categories = ["embedded", "no-std", "multimedia::images"]
keywords = ["graphics", "embedded-graphics", ]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.github/",
    "/.circleci/",
    ".gitignore",
]


#[[bench]]
#name = "parse"
#harness = false
#
[[bench]]
name = "draw"
harness = false

[dependencies]
embedded-graphics = "0.7"
smallvec = "1.10.0"

#giflzw = { git = "https://github.com/1024bees/giflzw", branch="main"}
weezl = {version = "0.1.7", features = []}


[dev-dependencies]
embedded-graphics-simulator = "0.3.0"
gif = "0.11.4"
criterion = "0.3.5"
clap = { version = "3.1.6", features = ["derive"] }
pprof = { version = "0.11", features = ["flamegraph"] }


